--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Shuttrbug</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="Book a photographer easily" />
+	<meta name="keywords" content="photographer, wedding, portrait, event, graduation" />
+	<meta name="author" content="Swapnil Mahajan" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
